# Sleepcover

./: README.md  com.github.Aurnytoraink.Sleepcover.json  meson.build  meson_options.txt  sleep-cover.py.in
data/: com.github.Aurnytoraink.Sleepcover.desktop.in.in  com.github.Aurnytoraink.Sleepcover.gresource.xml  com.github.Aurnytoraink.Sleepcover.gschema.xml.in  com.github.Aurnytoraink.Sleepcover.metainfo.xml.in.in  meson.build
data/icons/: meson.build
data/ui/: about-dialog.ui.in  dayrecord-row.ui  meson.build  window.ui
po/: POTFILES  meson.build
sleepcover/: app.py  meson.build
sleepcover/ui/: aboutdialog.py  window.py
src/: main.py  meson.build  sleepcover.in  window.py
